tui/src/pager/snapshots/tui__pager__tests__diff_equal.snap
---
source: tui/src/pager/mod.rs
expression: terminal.backend()
---
" hello                                           | hello                                            "
" world                                           | world                                            "
"                                                 |                                                  "
"                                                 |                                                  "
"(1/1) source +0, target -0        [            TMPDIR            ]                            h help"
