tui/src/pager/snapshots/tui__pager__tests__explorer_browser_file.snap
---
source: tui/src/pager/mod.rs
expression: terminal.backend()
---
"hello                                            |preview                                           "
"world                                            |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"Target browser (1/1)              [            TMPDIR            ]                            h help"
