tui/src/pager/snapshots/tui__pager__tests__explorer_dir_empty.snap
---
source: tui/src/pager/mod.rs
expression: terminal.backend()
---
"[            TMPDIR            ]                 |preview                                           "
"(empty)                                          |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"Target browser (1/0)              [            TMPDIR            ]                            h help"
