tui/src/pager/snapshots/tui__pager__tests__explorer_dir_files.snap
---
source: tui/src/pager/mod.rs
expression: terminal.backend()
---
"[            TMPDIR            ]                 |preview                                           "
"> a.txt                                          |                                                  "
"  b.txt                                          |                                                  "
"  c.txt                                          |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"Target browser (1/3)              [            TMPDIR            ]                            h help"
