tui/src/pager/snapshots/tui__pager__tests__view_multiple_fit.snap
---
source: tui/src/pager/mod.rs
expression: terminal.backend()
---
"line1                                                                                               "
"line2                                                                                               "
"line3                                                                                               "
"                                                                                                    "
"(1/1)                             [            TMPDIR            ]                            h help"
