tui/src/pager/snapshots/tui__pager__tests__view_single_line.snap
---
source: tui/src/pager/mod.rs
expression: terminal.backend()
---
"hello                                                                                               "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"(1/1)                             [            TMPDIR            ]                            h help"
